--- a/exercicios/ex022 - desafio 12/estilo/style.css
+++ b/exercicios/ex022 - desafio 12/estilo/style.css
@@ -56,7 +56,11 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 3.5vw;
+    font-size: 3vw;
+}
+
+section > p {
+    padding-bottom: 50px;
 }
 
 section.normal {
@@ -67,12 +71,27 @@ section.normal {
 section.imagem {
     background-color: rgb(63, 62, 62);
     color: white;
+    box-shadow: inset 5px 5px 12px 0px rgba(0, 0, 0, 0.336);
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.486);
+    background-color: rgba(0, 0, 0, 0.336);
     display: inline-block;
     padding: 8px;
+    text-shadow: 1.5px 1.5px 0px black;
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-position: center right;
+    background-size: cover;
 }
 
 footer {
